hs-bindgen/fixtures/manual/zero_copy/rust-bindgen.rs

/* automatically generated by rust-bindgen 0.71.1 */

#[repr(C)]
#[derive(Copy, Clone, Debug, Default, Eq, Hash, Ord, PartialEq, PartialOrd)]
pub struct __BindgenBitfieldUnit<Storage> {
    storage: Storage,
}
impl<Storage> __BindgenBitfieldUnit<Storage> {
    #[inline]
    pub const fn new(storage: Storage) -> Self {
        Self { storage }
    }
}
impl<Storage> __BindgenBitfieldUnit<Storage>
where
    Storage: AsRef<[u8]> + AsMut<[u8]>,
{
    #[inline]
    fn extract_bit(byte: u8, index: usize) -> bool {
        let bit_index = if cfg!(target_endian = "big") {
            7 - (index % 8)
        } else {
            index % 8
        };
        let mask = 1 << bit_index;
        byte & mask == mask
    }
    #[inline]
    pub fn get_bit(&self, index: usize) -> bool {
        debug_assert!(index / 8 < self.storage.as_ref().len());
        let byte_index = index / 8;
        let byte = self.storage.as_ref()[byte_index];
        Self::extract_bit(byte, index)
    }
    #[inline]
    pub unsafe fn raw_get_bit(this: *const Self, index: usize) -> bool {
        debug_assert!(index / 8 < core::mem::size_of::<Storage>());
        let byte_index = index / 8;
        let byte = *(core::ptr::addr_of!((*this).storage) as *const u8)
            .offset(byte_index as isize);
        Self::extract_bit(byte, index)
    }
    #[inline]
    fn change_bit(byte: u8, index: usize, val: bool) -> u8 {
        let bit_index = if cfg!(target_endian = "big") {
            7 - (index % 8)
        } else {
            index % 8
        };
        let mask = 1 << bit_index;
        if val { byte | mask } else { byte & !mask }
    }
    #[inline]
    pub fn set_bit(&mut self, index: usize, val: bool) {
        debug_assert!(index / 8 < self.storage.as_ref().len());
        let byte_index = index / 8;
        let byte = &mut self.storage.as_mut()[byte_index];
        *byte = Self::change_bit(*byte, index, val);
    }
    #[inline]
    pub unsafe fn raw_set_bit(this: *mut Self, index: usize, val: bool) {
        debug_assert!(index / 8 < core::mem::size_of::<Storage>());
        let byte_index = index / 8;
        let byte = (core::ptr::addr_of_mut!((*this).storage) as *mut u8)
            .offset(byte_index as isize);
        *byte = Self::change_bit(*byte, index, val);
    }
    #[inline]
    pub fn get(&self, bit_offset: usize, bit_width: u8) -> u64 {
        debug_assert!(bit_width <= 64);
        debug_assert!(bit_offset / 8 < self.storage.as_ref().len());
        debug_assert!(
            (bit_offset + (bit_width as usize)) / 8 <= self.storage.as_ref().len(),
        );
        let mut val = 0;
        for i in 0..(bit_width as usize) {
            if self.get_bit(i + bit_offset) {
                let index = if cfg!(target_endian = "big") {
                    bit_width as usize - 1 - i
                } else {
                    i
                };
                val |= 1 << index;
            }
        }
        val
    }
    #[inline]
    pub unsafe fn raw_get(this: *const Self, bit_offset: usize, bit_width: u8) -> u64 {
        debug_assert!(bit_width <= 64);
        debug_assert!(bit_offset / 8 < core::mem::size_of::<Storage>());
        debug_assert!(
            (bit_offset + (bit_width as usize)) / 8 <= core::mem::size_of::<Storage>(),
        );
        let mut val = 0;
        for i in 0..(bit_width as usize) {
            if Self::raw_get_bit(this, i + bit_offset) {
                let index = if cfg!(target_endian = "big") {
                    bit_width as usize - 1 - i
                } else {
                    i
                };
                val |= 1 << index;
            }
        }
        val
    }
    #[inline]
    pub fn set(&mut self, bit_offset: usize, bit_width: u8, val: u64) {
        debug_assert!(bit_width <= 64);
        debug_assert!(bit_offset / 8 < self.storage.as_ref().len());
        debug_assert!(
            (bit_offset + (bit_width as usize)) / 8 <= self.storage.as_ref().len(),
        );
        for i in 0..(bit_width as usize) {
            let mask = 1 << i;
            let val_bit_is_set = val & mask == mask;
            let index = if cfg!(target_endian = "big") {
                bit_width as usize - 1 - i
            } else {
                i
            };
            self.set_bit(index + bit_offset, val_bit_is_set);
        }
    }
    #[inline]
    pub unsafe fn raw_set(this: *mut Self, bit_offset: usize, bit_width: u8, val: u64) {
        debug_assert!(bit_width <= 64);
        debug_assert!(bit_offset / 8 < core::mem::size_of::<Storage>());
        debug_assert!(
            (bit_offset + (bit_width as usize)) / 8 <= core::mem::size_of::<Storage>(),
        );
        for i in 0..(bit_width as usize) {
            let mask = 1 << i;
            let val_bit_is_set = val & mask == mask;
            let index = if cfg!(target_endian = "big") {
                bit_width as usize - 1 - i
            } else {
                i
            };
            Self::raw_set_bit(this, index + bit_offset, val_bit_is_set);
        }
    }
}
#[repr(C)]
#[derive(Default)]
pub struct __IncompleteArrayField<T>(::std::marker::PhantomData<T>, [T; 0]);
impl<T> __IncompleteArrayField<T> {
    #[inline]
    pub const fn new() -> Self {
        __IncompleteArrayField(::std::marker::PhantomData, [])
    }
    #[inline]
    pub fn as_ptr(&self) -> *const T {
        self as *const _ as *const T
    }
    #[inline]
    pub fn as_mut_ptr(&mut self) -> *mut T {
        self as *mut _ as *mut T
    }
    #[inline]
    pub unsafe fn as_slice(&self, len: usize) -> &[T] {
        ::std::slice::from_raw_parts(self.as_ptr(), len)
    }
    #[inline]
    pub unsafe fn as_mut_slice(&mut self, len: usize) -> &mut [T] {
        ::std::slice::from_raw_parts_mut(self.as_mut_ptr(), len)
    }
}
impl<T> ::std::fmt::Debug for __IncompleteArrayField<T> {
    fn fmt(&self, fmt: &mut ::std::fmt::Formatter<'_>) -> ::std::fmt::Result {
        fmt.write_str("__IncompleteArrayField")
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct point {
    pub x: ::std::os::raw::c_int,
    pub y: ::std::os::raw::c_int,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of point"][::std::mem::size_of::<point>() - 8usize];
    ["Alignment of point"][::std::mem::align_of::<point>() - 4usize];
    ["Offset of field: point::x"][::std::mem::offset_of!(point, x) - 0usize];
    ["Offset of field: point::y"][::std::mem::offset_of!(point, y) - 4usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rectangle {
    pub topleft: point,
    pub bottomright: point,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of rectangle"][::std::mem::size_of::<rectangle>() - 16usize];
    ["Alignment of rectangle"][::std::mem::align_of::<rectangle>() - 4usize];
    [
        "Offset of field: rectangle::topleft",
    ][::std::mem::offset_of!(rectangle, topleft) - 0usize];
    [
        "Offset of field: rectangle::bottomright",
    ][::std::mem::offset_of!(rectangle, bottomright) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct circle {
    pub midpoint: point,
    pub radius: ::std::os::raw::c_int,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of circle"][::std::mem::size_of::<circle>() - 12usize];
    ["Alignment of circle"][::std::mem::align_of::<circle>() - 4usize];
    [
        "Offset of field: circle::midpoint",
    ][::std::mem::offset_of!(circle, midpoint) - 0usize];
    ["Offset of field: circle::radius"][::std::mem::offset_of!(circle, radius) - 8usize];
};
#[repr(C)]
#[derive(Copy, Clone)]
pub union shape {
    pub rectangle: rectangle,
    pub circle: circle,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of shape"][::std::mem::size_of::<shape>() - 16usize];
    ["Alignment of shape"][::std::mem::align_of::<shape>() - 4usize];
    [
        "Offset of field: shape::rectangle",
    ][::std::mem::offset_of!(shape, rectangle) - 0usize];
    ["Offset of field: shape::circle"][::std::mem::offset_of!(shape, circle) - 0usize];
};
#[repr(C)]
#[repr(align(4))]
#[derive(Debug, Copy, Clone)]
pub struct colour {
    pub _bitfield_align_1: [u8; 0],
    pub _bitfield_1: __BindgenBitfieldUnit<[u8; 4usize]>,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of colour"][::std::mem::size_of::<colour>() - 4usize];
    ["Alignment of colour"][::std::mem::align_of::<colour>() - 4usize];
};
impl colour {
    #[inline]
    pub fn opacity(&self) -> ::std::os::raw::c_uint {
        unsafe { ::std::mem::transmute(self._bitfield_1.get(0usize, 2u8) as u32) }
    }
    #[inline]
    pub fn set_opacity(&mut self, val: ::std::os::raw::c_uint) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            self._bitfield_1.set(0usize, 2u8, val as u64)
        }
    }
    #[inline]
    pub unsafe fn opacity_raw(this: *const Self) -> ::std::os::raw::c_uint {
        unsafe {
            ::std::mem::transmute(
                <__BindgenBitfieldUnit<
                    [u8; 4usize],
                >>::raw_get(::std::ptr::addr_of!((*this)._bitfield_1), 0usize, 2u8)
                    as u32,
            )
        }
    }
    #[inline]
    pub unsafe fn set_opacity_raw(this: *mut Self, val: ::std::os::raw::c_uint) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            <__BindgenBitfieldUnit<
                [u8; 4usize],
            >>::raw_set(
                ::std::ptr::addr_of_mut!((*this)._bitfield_1),
                0usize,
                2u8,
                val as u64,
            )
        }
    }
    #[inline]
    pub fn brightness(&self) -> ::std::os::raw::c_uint {
        unsafe { ::std::mem::transmute(self._bitfield_1.get(2usize, 3u8) as u32) }
    }
    #[inline]
    pub fn set_brightness(&mut self, val: ::std::os::raw::c_uint) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            self._bitfield_1.set(2usize, 3u8, val as u64)
        }
    }
    #[inline]
    pub unsafe fn brightness_raw(this: *const Self) -> ::std::os::raw::c_uint {
        unsafe {
            ::std::mem::transmute(
                <__BindgenBitfieldUnit<
                    [u8; 4usize],
                >>::raw_get(::std::ptr::addr_of!((*this)._bitfield_1), 2usize, 3u8)
                    as u32,
            )
        }
    }
    #[inline]
    pub unsafe fn set_brightness_raw(this: *mut Self, val: ::std::os::raw::c_uint) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            <__BindgenBitfieldUnit<
                [u8; 4usize],
            >>::raw_set(
                ::std::ptr::addr_of_mut!((*this)._bitfield_1),
                2usize,
                3u8,
                val as u64,
            )
        }
    }
    #[inline]
    pub fn red(&self) -> ::std::os::raw::c_uint {
        unsafe { ::std::mem::transmute(self._bitfield_1.get(5usize, 8u8) as u32) }
    }
    #[inline]
    pub fn set_red(&mut self, val: ::std::os::raw::c_uint) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            self._bitfield_1.set(5usize, 8u8, val as u64)
        }
    }
    #[inline]
    pub unsafe fn red_raw(this: *const Self) -> ::std::os::raw::c_uint {
        unsafe {
            ::std::mem::transmute(
                <__BindgenBitfieldUnit<
                    [u8; 4usize],
                >>::raw_get(::std::ptr::addr_of!((*this)._bitfield_1), 5usize, 8u8)
                    as u32,
            )
        }
    }
    #[inline]
    pub unsafe fn set_red_raw(this: *mut Self, val: ::std::os::raw::c_uint) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            <__BindgenBitfieldUnit<
                [u8; 4usize],
            >>::raw_set(
                ::std::ptr::addr_of_mut!((*this)._bitfield_1),
                5usize,
                8u8,
                val as u64,
            )
        }
    }
    #[inline]
    pub fn green(&self) -> ::std::os::raw::c_uint {
        unsafe { ::std::mem::transmute(self._bitfield_1.get(13usize, 8u8) as u32) }
    }
    #[inline]
    pub fn set_green(&mut self, val: ::std::os::raw::c_uint) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            self._bitfield_1.set(13usize, 8u8, val as u64)
        }
    }
    #[inline]
    pub unsafe fn green_raw(this: *const Self) -> ::std::os::raw::c_uint {
        unsafe {
            ::std::mem::transmute(
                <__BindgenBitfieldUnit<
                    [u8; 4usize],
                >>::raw_get(::std::ptr::addr_of!((*this)._bitfield_1), 13usize, 8u8)
                    as u32,
            )
        }
    }
    #[inline]
    pub unsafe fn set_green_raw(this: *mut Self, val: ::std::os::raw::c_uint) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            <__BindgenBitfieldUnit<
                [u8; 4usize],
            >>::raw_set(
                ::std::ptr::addr_of_mut!((*this)._bitfield_1),
                13usize,
                8u8,
                val as u64,
            )
        }
    }
    #[inline]
    pub fn blue(&self) -> ::std::os::raw::c_uint {
        unsafe { ::std::mem::transmute(self._bitfield_1.get(21usize, 8u8) as u32) }
    }
    #[inline]
    pub fn set_blue(&mut self, val: ::std::os::raw::c_uint) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            self._bitfield_1.set(21usize, 8u8, val as u64)
        }
    }
    #[inline]
    pub unsafe fn blue_raw(this: *const Self) -> ::std::os::raw::c_uint {
        unsafe {
            ::std::mem::transmute(
                <__BindgenBitfieldUnit<
                    [u8; 4usize],
                >>::raw_get(::std::ptr::addr_of!((*this)._bitfield_1), 21usize, 8u8)
                    as u32,
            )
        }
    }
    #[inline]
    pub unsafe fn set_blue_raw(this: *mut Self, val: ::std::os::raw::c_uint) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            <__BindgenBitfieldUnit<
                [u8; 4usize],
            >>::raw_set(
                ::std::ptr::addr_of_mut!((*this)._bitfield_1),
                21usize,
                8u8,
                val as u64,
            )
        }
    }
    #[inline]
    pub fn new_bitfield_1(
        opacity: ::std::os::raw::c_uint,
        brightness: ::std::os::raw::c_uint,
        red: ::std::os::raw::c_uint,
        green: ::std::os::raw::c_uint,
        blue: ::std::os::raw::c_uint,
    ) -> __BindgenBitfieldUnit<[u8; 4usize]> {
        let mut __bindgen_bitfield_unit: __BindgenBitfieldUnit<[u8; 4usize]> = Default::default();
        __bindgen_bitfield_unit
            .set(
                0usize,
                2u8,
                {
                    let opacity: u32 = unsafe { ::std::mem::transmute(opacity) };
                    opacity as u64
                },
            );
        __bindgen_bitfield_unit
            .set(
                2usize,
                3u8,
                {
                    let brightness: u32 = unsafe { ::std::mem::transmute(brightness) };
                    brightness as u64
                },
            );
        __bindgen_bitfield_unit
            .set(
                5usize,
                8u8,
                {
                    let red: u32 = unsafe { ::std::mem::transmute(red) };
                    red as u64
                },
            );
        __bindgen_bitfield_unit
            .set(
                13usize,
                8u8,
                {
                    let green: u32 = unsafe { ::std::mem::transmute(green) };
                    green as u64
                },
            );
        __bindgen_bitfield_unit
            .set(
                21usize,
                8u8,
                {
                    let blue: u32 = unsafe { ::std::mem::transmute(blue) };
                    blue as u64
                },
            );
        __bindgen_bitfield_unit
    }
}
pub type myInt = ::std::os::raw::c_int;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct drawing {
    pub shape: *mut shape,
    pub colour: *mut colour,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of drawing"][::std::mem::size_of::<drawing>() - 16usize];
    ["Alignment of drawing"][::std::mem::align_of::<drawing>() - 8usize];
    ["Offset of field: drawing::shape"][::std::mem::offset_of!(drawing, shape) - 0usize];
    [
        "Offset of field: drawing::colour",
    ][::std::mem::offset_of!(drawing, colour) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct tic_tac_toe {
    pub row1: [::std::os::raw::c_int; 3usize],
    pub row2: [::std::os::raw::c_int; 3usize],
    pub row3: [::std::os::raw::c_int; 3usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of tic_tac_toe"][::std::mem::size_of::<tic_tac_toe>() - 36usize];
    ["Alignment of tic_tac_toe"][::std::mem::align_of::<tic_tac_toe>() - 4usize];
    [
        "Offset of field: tic_tac_toe::row1",
    ][::std::mem::offset_of!(tic_tac_toe, row1) - 0usize];
    [
        "Offset of field: tic_tac_toe::row2",
    ][::std::mem::offset_of!(tic_tac_toe, row2) - 12usize];
    [
        "Offset of field: tic_tac_toe::row3",
    ][::std::mem::offset_of!(tic_tac_toe, row3) - 24usize];
};
#[repr(C)]
#[derive(Debug)]
pub struct vector {
    pub len: ::std::os::raw::c_int,
    pub data: __IncompleteArrayField<::std::os::raw::c_char>,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of vector"][::std::mem::size_of::<vector>() - 4usize];
    ["Alignment of vector"][::std::mem::align_of::<vector>() - 4usize];
    ["Offset of field: vector::len"][::std::mem::offset_of!(vector, len) - 0usize];
    ["Offset of field: vector::data"][::std::mem::offset_of!(vector, data) - 4usize];
};
unsafe extern "C" {
    pub fn reverse(input: *const vector, output: *mut vector) -> ::std::os::raw::c_int;
}
pub type triplet = [::std::os::raw::c_int; 3usize];
pub type matrix = [triplet; 3usize];
unsafe extern "C" {
    pub fn transpose(input: *const triplet, output: *mut triplet);
}
